--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<h1>Hello world!!!</h1>
+<h1>Welcome to home page</h1>
 
 <%= link_to "Article Listtings", articles_path%>
 <%= link_to "About Page", about_path%>
