--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -23,6 +23,8 @@
         
       <% end %>
     </div>
-    <%= link_to "[ Cancel and return to articles listing ]", articles_path, class: "text-info" %>     
+    <div class="md=3">
+      <%= link_to "[ Cancel and return to articles listing ]", articles_path, class: "text-info" %>     
+    </div>
   </div>
 </div>
